2007-10-20  Ethan Merritt  <merritt@u.washington.edu>

	Patch 1 of 2: Rationalize use of the pointflag Boolean in lp_style_type.
	The current code relies on lp_parse() to set this flag as a side effect,
	but this is not correct. lp_parse() uses the flag to determine whether
	point style options are legal in the current context. This is not always
	the same thing as saying that the current plot will have points.
	In particular, it is reasonable to set point properties in linestyles,
	yet not all plots using that linestyle will actually contain points.
	This caused some plots with lines to be drawn as linespoints.

	* src/misc.c (lp_parse lp_use_properties): Do not set the pointflag.

	* src/plot2d.c src/plot3d.c: At the end of parsing plot options, set 
	lp_properties.pointflag based on the PLOT_STYLE_HAS_POINT flag in the
	plot_style field of the plot structure.

	Patch 2 of 2: Remove 3rd parameter of lp_use_properties(), which is no
	longer used.

	* src/color.c src/gadgets.c src/graph3d.c src/graphics.c src/misc.c
	src/misc.h src/plot2d.c src/plot3d.c src/term_api.h src/util3d.c

2007-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional): Check for user-defined
	line styles when choosing colors for front/back of hidden surfaces.

	* src/misc.c src/hidden3d.c: Clean up comments emphasizing that basic
	line properties must be initilized before calling lp_use_properties().

	* src/color.c (draw_color_smooth) src/graph3d.c (do_3dplot cntr3d_lines)
	src/misc.c (lp_use_properties):  Failure to initialize structure passed
	to lp_use_properties().
	Bugfix.

2007-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (pause_command): Accept a string expression as the
	final parameter to "pause" commands.

2007-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL NEWS PORTING README configure.in configure.vms
	config/* docs/doc2texi.el docs/gpcard.tex docs/Makefile.in